--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "next": "14.2.32",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
     "@types/node": "20.17.24",
     "@types/react": "18.3.19",
     "@types/react-dom": "18.3.5",
     "autoprefixer": "10.4.21",
-    "eslint": "8.57.1",
-    "eslint-config-next": "14.2.32",
+    "eslint": "^10.0.2",
+    "eslint-config-next": "^12.0.4",
     "postcss": "8.5.3",
     "tailwindcss": "3.4.17",
     "typescript": "5.8.2"
