--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@types/react": "18.3.19",
     "@types/react-dom": "18.3.5",
     "autoprefixer": "10.4.21",
-    "eslint": "^10.0.2",
-    "eslint-config-next": "^12.0.4",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^16.1.6",
     "postcss": "8.5.3",
     "tailwindcss": "3.4.17",
     "typescript": "5.8.2"
+  },
+  "overrides": {
+    "minimatch": "^10.2.1"
   }
 }
